--- a/style1.html
+++ b/style1.html
@@ -119,17 +119,23 @@
     }
     /* Placeholder icon text styling */
     .footer-icon .icon-placeholder {
-      width: 40px;
-      height: 40px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 14px;
-      color: var(--light-text);
-      filter: invert(100%) drop-shadow(0 2px 4px rgba(0, 0, 0, 0.2));
-    }
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 14px;
+  color: var(--light-text);
+  filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.2));
+}
     .footer a.active .icon-placeholder {
       filter: invert(77%) sepia(88%) saturate(900%) hue-rotate(0deg) brightness(100%) contrast(100%) drop-shadow(0 2px 4px rgba(0, 0, 0, 0.2));
+    }
+
+    .tab-button {
+      border: 2px solid var(--accent-color);
+      background: var(--secondary-color);
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
     }
   </style>
 </head>
@@ -212,7 +218,7 @@
     </a>
     <a href="#" class="footer-icon" aria-label="Profile">
       <div class="icon-placeholder">
-        ☺
+        👤
        </div>
       <span>Profile</span>
     </a>
