--- a/style3.html
+++ b/style3.html
@@ -224,6 +224,8 @@
       z-index: 100;
       height: var(--footer-height);
     }
+
+    
     .footer a {
       text-decoration: none;
       color: var(--light-text);
@@ -241,18 +243,15 @@
       font-weight: 600;
     }
     .footer-icon .icon-placeholder {
-      width: 40px;
-      height: 40px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 14px;
-      color: var(--light-text);
-      filter: invert(100%) drop-shadow(0 2px 4px rgba(0, 0, 0, 0.2));
-    }
-    .footer a.active .icon-placeholder {
-      filter: invert(77%) sepia(88%) saturate(900%) hue-rotate(0deg) brightness(100%) contrast(100%) drop-shadow(0 2px 4px rgba(0, 0, 0, 0.2));
-    }
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 14px;
+  color: var(--light-text);
+  filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.2));
+}
     .footer a.active span {
       color: var(--accent-color);
     }
@@ -385,16 +384,20 @@
   </div>
 
   <div class="footer" id="footer">
-    <a href="index.html" class="footer-icon active" aria-label="Home">
-      <div class="icon-placeholder">[Home Icon]</div>
+    <a href="index.html" class="footer-icon" aria-label="Home">
+      <div class="icon-placeholder">
+        🏠︎
+    </div>
       <span>Home</span>
     </a>
     <a href="#" class="footer-icon" aria-label="Profile">
-      <div class="icon-placeholder">[Profile Icon]</div>
+      <div class="icon-placeholder">
+        🙎🏻‍♂️
+       </div>
       <span>Profile</span>
     </a>
     <a href="#" class="footer-icon" aria-label="Market">
-      <div class="icon-placeholder">[Market Icon]</div>
+      <div class="icon-placeholder">★ </div>
       <span>Market</span>
     </a>
   </div>
