--- a/style1.html
+++ b/style1.html
@@ -142,7 +142,7 @@
 <body class="min-h-screen">
   <div class="container mx-auto p-4">
     <div id="style-4">
-      <h2 class="text-2xl font-bold text-center mb-6">Rewards - Tabbed Layout</h2>
+      <h2 class="text-2xl font-bold text-center mb-6"></h2>
       <div class="flex justify-center mb-4">
         <button onclick="showTab('available')" class="tab-button px-4 py-2 bg-[var(--primary-color)] text-[var(--text-color)] rounded-l-lg">Available</button>
         <button onclick="showTab('bought')" class="tab-button px-4 py-2 bg-[var(--secondary-color)] text-[var(--text-color)]">Obtained</button>
