--- a/style2.html
+++ b/style2.html
@@ -150,7 +150,7 @@
 <body class="min-h-screen">
   <div class="container mx-auto p-4">
     <div id="style-2">
-      <h2 class="text-2xl font-bold text-center mb-6">Rewards - Card Flip Layout</h2>
+      <h2 class="text-2xl font-bold text-center mb-6"></h2>
       <div class="flex justify-center mb-4">
         <button onclick="showTab('rewards')" class="tab-button px-4 py-2 bg-[var(--primary-color)] text-[var(--secondary-color)] rounded-l-lg">Rewards</button>
         <button onclick="showTab('history')" class="tab-button px-4 py-2 bg-[var(--secondary-color)] text-[var(--text-color)] rounded-r-lg">History</button>
